2008-01-24  Laurent Debacker <debackerl@gmail.com> 

	* RibbonGroup.cs, Button.cs: Added signal names to enable accelerators.

2007-12-30  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs, Position.cs, RibbonGroup.cs, Ribbons.mdp: Left, Right, and Top
	  position for the label of RibbonGroup implemented.

2007-12-28  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs, ToggleButton.cs, RibbonGroup.cs, Tile.cs, Gallery.cs, Theme.cs,
	  gtk-gui/generated.cs, gtk-gui/objects.xml, gtk-gui/gui.stetic,
	  Ribbons.mdp, Button.cs, ChangeLog: Fixing calls to Dispose() and
	  Destroy()
